--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^14.19.3",
     "express": "^5.1.0",
     "facebook-chat-api": "github:ruingl/facebook-chat-api",
+    "fs": "^0.0.1-security",
     "fs-extra": "^11.3.0",
     "gradient-string": "^2.0.2",
     "node-fetch": "^3.3.1",
