--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs": "^0.0.1-security",
     "fs-extra": "^11.3.0",
     "gradient-string": "^2.0.2",
+    "mongoose": "^8.15.1",
     "node-fetch": "^3.3.1",
     "path": "^0.12.7",
     "websocket": "^1.0.35"
