update(ai) - use new provider

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "node-fetch": "^3.3.1",
     "path": "^0.12.7",
     "websocket": "^1.0.35",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "openai": "latest"
   },
   "devDependencies": {
     "@types/node": "^20.17.54",
