--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.9.0",
     "chalk": "^4.1.2",
+    "chatbox-fca-remake": "^0.0.1-security",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "discord.js": "^14.19.3",
     "dotenv": "^16.6.1",
@@ -19,7 +21,7 @@
     "express": "^5.1.0",
     "facebook-chat-api": "github:ruingl/facebook-chat-api",
     "fs": "^0.0.1-security",
-    "fs-extra": "^11.3.0",
+    "fs-extra": "^11.3.1",
     "gradient-string": "^2.0.2",
     "mongoose": "^8.16.4",
     "node-fetch": "^3.3.1",
