--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
-  "type": "module",
+  "type": "CommonJS",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,6 +27,8 @@
     "node-fetch": "^3.3.1",
     "openai": "latest",
     "path": "^0.12.7",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "websocket": "^1.0.35",
     "winston": "^3.17.0",
     "ws3-fca": "github:NethWs3Dev/ws3-fca"
